testing/testFirst/test1_str/expected.txt
txt:9  error: redeclaration of 'S0:'
 9  | S0: .string "hey"
    | ^~~
txt:12 error: empty string initialization
 12 | S1: .string
    |            ^
txt:15 error: missing opening " character in 'a"'
 15 | S2: .string a"
    |             ^~
txt:18 error: missing terminating " character in '"a" b'
 18 | S3: .string "a" b
    |             ^~~~~
txt:21 error: missing terminating " character in '"abc'
 21 | S4: .string "abc
    |             ^~~~
txt:22 error: missing terminating " character in '"ab"c'
 22 | S5: .string "ab"c
    |             ^~~~~
txt:25 warning: '.string' variables may be inaccessible without label
 25 | .string "b"
    | ^~~~~~~